# jw-summarize-cloud

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  pyproject.toml
docs/deploy/: cloud-pipeline-gcp-ui.md  cloud-pipeline-gcp.md
docs/design/: architecture.md  cloud-pipeline.md
scripts/cloud_pipeline/: Code.gs  appsscript.json
tests/jw_subtitles/: test_cli.py  test_jw_api.py  test_vtt.py
tests/jw_summarize/: test_cloud_pipeline.py  test_github_publisher.py  test_pipeline.py  test_webapp.py
tools/jw_subtitles/: __init__.py  cli.py  http.py  jw_api.py  vtt.py
tools/jw_summarize/: __init__.py  audio.py  auth.py  cli.py  cloud_pipeline.py  config.py  exceptions.py  github_publisher.py  llm.py  local_publisher.py  models.py  obsidian.py  publisher.py  service.py  sheets.py  summarizer.py  title.py  webapp.py
